UI Fixes: overflow

--- a/bhp.css
+++ b/bhp.css
@@ -306,6 +306,7 @@
     width: 90vw;
     border: 2px solid var(--main-color);
     margin: 30px 0;
+    overflow: hidden;
 }
 
 .c3left,
@@ -363,9 +364,11 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    max-width: 60vw;
+    width: 90vw;
+    max-width: 600px;
     border: 2px solid var(--main-color);
-    margin: 30px 0;
+    margin: 30px;
+    overflow: hidden;
 }
 
 .c4top,
@@ -377,7 +380,7 @@
 
 .c4bottom {
     margin: 20px;
-    width: 60%;
+    /* width: 60%; */
     /* min-width: 400px; */
 }
 
