--- a/responsive.css
+++ b/responsive.css
@@ -98,6 +98,17 @@
     }
 } 
 
+/* @media only screen and ( min-width: 600px ) {
+    .c4education{
+        width: 70vw;
+    } 
+}
+@media only screen and ( min-width: 900px ) {
+    .c4education{
+        width: 60vw;
+    } 
+} */
+
 @media only screen and (max-width:320px){
     .navbar .logo{
         font-size: 20px;
